--- a/app/src/main/res/layout/book_layout.xml
+++ b/app/src/main/res/layout/book_layout.xml
@@ -55,6 +55,12 @@
                     android:textColor="@color/light_gray" />
 
                 <TextView
+                    android:id="@+id/publisher"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Publisher" />
+
+                <TextView
                     android:id="@+id/date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
