--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -141,14 +141,14 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/readBtn"
+                    android:id="@+id/previewBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:backgroundTint="@color/teal_700"
                     android:drawableLeft="@drawable/book"
-                    android:text="Read Now"
+                    android:text="Preview"
                     android:textAllCaps="false" />
 
                 <Button
