--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
         android:fontFamily="sans-serif"
-        android:text="Discover Books"
+        android:text="GOks"
         android:textColor="@color/light_brown"
         android:textSize="20sp"
         android:textStyle="bold"
