--- a/app/src/main/res/layout/book_layout.xml
+++ b/app/src/main/res/layout/book_layout.xml
@@ -39,7 +39,6 @@
                     android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:maxLines="1"
                     android:text="Book Title"
                     android:textColor="@color/light_brown"
@@ -50,15 +49,18 @@
                     android:id="@+id/author"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxLines="1"
+                    android:maxLines="2"
                     android:text="Author"
-                    android:textColor="@color/light_gray" />
+                    android:textColor="@color/light_gray"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/publisher"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Publisher" />
+                    android:text="Publisher"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/date"
@@ -66,7 +68,8 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:text="Publishing Date"
-                    android:textColor="@color/light_gray" />
+                    android:textColor="@color/light_gray"
+                    android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
