--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,17 +53,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+    <RelativeLayout
+        android:layout_width="350dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/drop_shadow"
+        android:elevation="3dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/searchEt"
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="80dp"
             android:background="@drawable/search_bar"
             android:drawablePadding="8dp"
             android:ems="10"
@@ -76,24 +79,36 @@
             android:textColorHint="#FFFFFF"
             android:textSize="12sp" />
 
-        <ImageButton
-            android:id="@+id/searchBtn"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
-            android:layout_marginTop="80dp"
-            android:layout_weight="1"
-            android:backgroundTint="#CF9F8A"
-            app:srcCompat="@drawable/search" />
+        <FrameLayout
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/searchBtn"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:padding="12dp"
+                app:srcCompat="@drawable/search"
+                />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/search_icon" />
+
+        </FrameLayout>
+
+    </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mainRv"
         android:layout_width="match_parent"
-        android:layout_height="520dp"
-        android:layout_marginTop="149dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="156dp"
         android:background="#CF9F8A"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
