--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,6 +37,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="28dp"
             android:fontFamily="sans-serif"
+            android:maxLines="2"
             android:text="Discover Books"
             android:textColor="@color/light_brown"
             android:textSize="20sp"
