--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -161,7 +161,7 @@
                     android:textAllCaps="false" />
 
                 <Button
-                    android:id="@+id/infoBtn"
+                    android:id="@+id/toReadBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
