--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -56,7 +56,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <EditText
-                android:id="@+id/searchEt"
+                android:id="@+id/searchLib"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@drawable/search_bar"
@@ -77,7 +77,7 @@
                 android:layout_alignParentRight="true">
 
                 <ImageView
-                    android:id="@+id/searchBtn"
+                    android:id="@+id/searchLibBtn"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:padding="12dp"
