--- a/app/src/main/res/layout/fragment_booklist.xml
+++ b/app/src/main/res/layout/fragment_booklist.xml
@@ -56,7 +56,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <EditText
-                android:id="@+id/searchLib"
+                android:id="@+id/searchFavTitleEt"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@drawable/search_bar"
