--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -56,7 +56,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <EditText
-                android:id="@+id/searchLib"
+                android:id="@+id/searchFavTitleEt"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@drawable/search_bar"
@@ -72,6 +72,7 @@
                 android:textSize="12sp" />
 
             <FrameLayout
+                android:id="@+id/searchFavorite"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true">
@@ -81,8 +82,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:padding="12dp"
-                    app:srcCompat="@drawable/search"
-                    />
+                    app:srcCompat="@drawable/search" />
 
                 <ImageView
                     android:layout_width="match_parent"
