Implemented download feature

--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -172,6 +172,15 @@
                     android:textAllCaps="false" />
             </LinearLayout>
 
+            <Button
+                android:id="@+id/downloadBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_brown"
+                android:drawableLeft="@drawable/download"
+                android:text="Download ACS token for PDF"
+                android:textAllCaps="false" />
+
         </LinearLayout>
 
     </ScrollView>
